--- a/Wiz-interactive-map.html
+++ b/Wiz-interactive-map.html
@@ -14,7 +14,7 @@
         height: 100%;
       }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9J_zCJMayc7-IY0tHz28uviJN_7DFuNY"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9J_zCJMayc7-IY0tHz28uviJN_7DFuNY&callback=initMap"></script>
   </head>
   <body>
     <div id="map"></div>
