--- a/Wiz-interactive-map.html
+++ b/Wiz-interactive-map.html
@@ -19,28 +19,11 @@
   <body>
     <div id="map"></div>
     <script>
-      let map;
-
-      function initMap(locations) {
+ let map;
+      function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
           center: { lat: 39.7392, lng: -104.9903 },
           zoom: 8,
-        });
-
-        locations.forEach(loc => {
-          const marker = new google.maps.Marker({
-            position: { lat: loc.latitude, lng: loc.longitude },
-            map: map,
-            title: loc.name,
-          });
-
-          const infoWindow = new google.maps.InfoWindow({
-            content: `<strong>${loc.name}</strong><br>${loc.address}`,
-          });
-
-          marker.addListener("click", () => {
-            infoWindow.open(map, marker);
-          });
         });
       }
 
@@ -48,7 +31,21 @@
         try {
           const data = JSON.parse(event.data);
           if (Array.isArray(data)) {
-            initMap(data);
+            data.forEach(loc => {
+              const marker = new google.maps.Marker({
+                position: { lat: loc.latitude, lng: loc.longitude },
+                map: map,
+                title: loc.name,
+              });
+
+              const infoWindow = new google.maps.InfoWindow({
+                content: `<strong>${loc.name}</strong><br>${loc.address}`,
+              });
+
+              marker.addListener("click", () => {
+                infoWindow.open(map, marker);
+              });
+            });
           }
         } catch (e) {
           console.error("Invalid data received:", e);
