--- a/Wiz-interactive-map.html
+++ b/Wiz-interactive-map.html
@@ -16,7 +16,6 @@
     </style>
   </head>
   <body>
-    <div id="map"></div>
     <script>
  let map;
       function initMap() {
@@ -51,6 +50,6 @@
         }
       });
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9J_zCJMayc7-IY0tHz28uviJN_7DFuNYY&callback=initMap"></script>
   </body>
 </html>
